@@ -1,3 +1,10 @@
+2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/zipvfs.tcl: Cleaned up the zip stream read function to
+	conform to the published specification more closely and avoid
+	excess calls to the stat function.
+	* pkgIndex.tcl.in: Incremented version of vfs::zip
+
 2008-12-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in: change VPATH to ensure that configure munging of
